--- a/styles.css
+++ b/styles.css
@@ -515,6 +515,7 @@ body {
   z-index: 1002;
   justify-content: center;
   align-items: center;
+  overflow-y: auto;
 }
 
 .modal-content,
@@ -525,10 +526,11 @@ body {
   padding: 30px;
   border-radius: 10px;
   width: 90%;
-  max-width: 500px;
+  max-width: 400px;
   position: relative;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   border: 1px solid rgba(255, 255, 255, 0.1);
+  margin: 100px auto;
 }
 
 .skill-modal-content,
@@ -1350,6 +1352,19 @@ body {
   color: var(--accent-color);
 }
 
+.login-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1002;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
+}
 /* Footer */
 .footer {
   background-color: rgba(10, 17, 40, 0.9);
