--- a/styles.css
+++ b/styles.css
@@ -1014,11 +1014,11 @@ span{
 }
 
 .skill-modal-header {
-  width: 100%;
-  height: 200px;
+  width: 50%;
   overflow: hidden;
-  border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 10px 10px;
   margin-bottom: 20px;
+  margin: auto;
 }
 
 .skill-modal-header img {
@@ -1152,11 +1152,11 @@ span{
 }
 
 .career-modal-header {
-  width: 100%;
-  height: 200px;
+  width: 50%;
   overflow: hidden;
-  border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 10px 10px;
   margin-bottom: 20px;
+  margin: auto;
 }
 
 .career-modal-header img {
